bookface_light_userstyles.css
/*
	Name	   : Bookface Light User Styles
	Version    : 1.5.19
    Licence    : AGPL
    Created on : 20 Mar 2025
    Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
    
	This "user styles" stylesheet will override Friendica and style it more like Facebook.
     
	Go to Settings - Display - Theme and select "Frio"
	Under "Theme Customization" select default "Lite" scheme, blue variant
	-or-
	Edit the --link-color: value in :root section below to match your Accent Color choice:
   	Blue:	#0066FF;
   	Red:	#b50404;
   	Purple:	#94439b;
   	Green:	#218f39;
   	Pink:	#d900a9;
	-or -
	Choose "Custom" and paste this schemestring:

	{"nav_bg":"#ffffff","nav_icon_color":"#65686c","link_color":"#0066ff","background_color":"#f2f4f7","background_image":"","contentbg_transp":"100"}
   				change Accent Color to your choice here -----------^
   				then match it in --link-color: in :root section		
   									
   Paste the css code below into Stylus add-on for Firefox, Stylus Extension for Chrome, or Usercripts extension for Safari.
   You can also pasted it into a userContent.css file for Firefox, but wrap it in "@-moz-document domain(friendica.instance){...}" (replace with your server)

*/

:root {
    --global-font-family: "Open Sans", Arial, sans-serif, Noto Color Emoji;
    --nav-bg: #ffffff;
    --link-color: #0066ff;	/* match Accent color here */
    --nav-icon-color: #65686C;
    --background-color: #f2f4f7;
	--content-bg: var(--nav-bg);
	--comment-bg: var(--background-color);
    --font-color: #313131;
    --font-color-darker: #333333;
    --font-color-lighter: #444444;
    --menu-background-hover-color: color-mix(in oklab, var(--link-color) 15%, white);
    --border-color: #eeeeee;
    --count-color:  #ffffff;
    --count-bg: var(--link-color);
	--attach-file-button: none; /* none or block */
    
    /* LOCALIZE pseudo-element text below */
    --sign-in-text: 'Sign-In';
    --compose-text: 'Compose';
    --new-note-text: 'New Note';    
    --save-search-text: 'Save Search';
    --follow-tag-text: 'Follow Tag';
    --comment-button-text: 'Comment';
    --share-button-text: 'Share';
    --quote-button-text: 'Quote';
    --like-button-text: 'Like';
    --dislike-button-text: 'Dislike';
    --more-button-text: 'More';
    --attendyes-button-text: 'Going';
    --attendno-button-text: 'Can\'t Go';
    --attendmaybe-button-text: 'Maybe';
    --add-photo-button-text: 'Add Photos';
    --follow-button-text: 'Follow';
    --save-button-text: 'Save';    
}

	body {
		background-color: var(--background-color)  !important;
		font-size: 15px  !important;
		padding-top: 130px  !important;
		font-family: var(--global-font-family) !important;
	}
	body a:hover {
		color: var(--link-color) !important;
	}
	.toplevel_item:hover .fakelink, 
	.wall-item-container:hover .fakelink, 
	.toplevel_item:hover .wall-item-container:hover .wall-item-responses a, 
	.toplevel_item:hover .wall-item-content a, 
	.toplevel_item:hover .wall-item-name, 
	.wall-item-container:hover .wall-item-content a, 
	.wall-item-container:hover .wall-item-name, 
	.wall-item-container:hover .wall-item-location a,
	.btn-link {
		color: var(--link-color) !important;
	}
    .topbar a:hover,
    .topbar a:focus,
    .topbar a:active,
	main a:hover, 
	main a:focus, 
	main a:active {
		color: var(--link-color) !important;
	}
	#topbar-first .nav > li > a, 
	#topbar-first .nav > li > button, 
	nav.navbar .nav > li > a, 
	nav.navbar .nav > li > button{
		color: var(--nav-icon-color)  !important;
	}
	#topbar-first .nav > .open > a, 
	#topbar-first .nav > .open > button {
		background-color: transparent !important;
	}
	#topbar-first, nav.navbar {
		background-color: var(--nav-bg)  !important;
		color: var(--nav-icon-color)  !important;
		height: 55px !important;
	}
		#topbar-first .topbar-nav .nav-segment {
			margin-right: 10px !important;
		}
		#topbar-first .nav > li > a:hover:not(.selected) {
			background-color: rgba(128,128,128,.1)  !important;
			border-radius: 8px  !important;
		}
		.fa-lg {
			font-size: 24px  !important;
		}
	#topbar-first .nav > li > a:hover, 
	#topbar-first .nav > li > a:focus, 
	#topbar-first .nav > li > button:not(#main-menu):hover, 
	#topbar-first .nav > li > button:not(#main-menu):focus,
	#topbar-first button.navbar-toggle:hover,
	#topbar-first button.navbar-toggle:focus, 
	nav.navbar .nav > li > a:hover, 
	nav.navbar .nav > li > a:focus, 
	nav.navbar .nav > li > button:hover, 
	nav.navbar .nav > li > button:focus {
	  background-color: rgba(128,128,128,.1)  !important;
		border-radius: 8px  !important;
		
	}
	#topbar-first button.navbar-toggle,
	#nav-notifications-menu-btn {
		width: 50px !important;
		height: 50px !important;
	}	
	#topbar-first .nav > li > a.selected,
	#nav-notification.dropdown.open {
		border-bottom: 3px solid var(--link-color)  !important;
		color: var(--link-color)  !important;
	}
.topbar .dropdown-header .dropdown-header-link a, 
.topbar .dropdown-header .dropdown-header-link .btn-link {
	color: var(--link-color) !important;;
}
	#topbar-first .nav > li > a.selected:hover,
	#topbar-first .nav > li > a.selected:focus,
	#topbar-first .nav > li > #main-menu:hover,
	#topbar-first .nav > li > #main-menu:focus,
	#nav-notification.dropdown.open #nav-notifications-menu-btn:hover,
	#nav-notification.dropdown.open #nav-notifications-menu-btn:focus {
		background-color: transparent  !important;
		border-radius: 0  !important;
	}
	#nav-notification.dropdown.open #nav-notifications-menu-btn .fa-bell::before {
		content: '\f0f3' !important;	
		color: var(--link-color) !important;	
	}
	.notif-item img.notif-image,
	.intro-photo-wrapper img.intro-photo {
		border-radius: 100%;
	}
ul.nav-tabs {
	display: flex !important;
	flex-wrap: wrap !important;
	justify-content: flex-start !important;
	padding-bottom: 20px !important;
	border-color:rgba(0,0,0,.2) !important;
}
	ul.tabs li {
		font-size: 15px !important;
		margin-left: 10px !important;
	}
/* ... */

